# maihuenia

./: .gitignore  CMakeLists.txt  README.md  delete_generated_bash.sh  delete_generated_dos.bat
codegen/: gen_bin_op_many_impl_hpp.py  gen_get_string_chars_hpp.py  gen_pp_at_impl_hpp.py  gen_pp_for_impl_hpp.py  gen_pp_num_args_impl_hpp.py  gen_pp_transform_impl_hpp.py
doc/: CMakeLists.txt  Doxyfile.in  definitions.dox  examples.dox  main_page.dox  modules.dox  motivation.dox  naming_conventions.dox  prior_art.dox  typeclasses.dox
example/: CMakeLists.txt  custom_typeclass.cpp  fibonacci.cpp  ordering_strings.cpp
example/individual/alg_creation/: cartesian_product.cpp  copy.cpp  fill.cpp  intercalate.cpp  iota.cpp  partition.cpp  scan_left.cpp  scan_left_initial.cpp  scan_right.cpp  scan_right_initial.cpp  split.cpp  split_sd.cpp  zip.cpp  zip_with.cpp
example/individual/alg_querying/: all_of.cpp  any_of.cpp  contains.cpp  count.cpp  count_if.cpp  count_until.cpp  count_while.cpp  find.cpp  find_if.cpp  has_repeated.cpp  is_permutation.cpp  lexicographical_compare.cpp  max_element.cpp  min_element.cpp  none_of.cpp
example/individual/alg_runtime/: for_each.cpp
example/individual/alg_transformation/: drop_until.cpp  drop_while.cpp  intersperse.cpp  remove.cpp  remove_if.cpp  replace.cpp  replace_if.cpp  reverse.cpp  sort.cpp  take_until.cpp  take_while.cpp  unique.cpp
example/individual/applicative/: ap.cpp  lift.cpp
example/individual/bitwise/: bit_and.cpp  bit_not.cpp  bit_or.cpp  bit_xor.cpp  shift_left.cpp  shift_right.cpp
example/individual/comparable/: equals.cpp  not_equals.cpp
example/individual/control/: eval_if.cpp  if.cpp  until.cpp  while.cpp
example/individual/core/: equal_types.cpp  tag.cpp
example/individual/enumerable/: decr.cpp  incr.cpp
example/individual/extensible_mapping/: aclear.cpp  aerase.cpp  ainsert.cpp
example/individual/foldable/: fold_left.cpp  fold_left_initial.cpp  fold_right.cpp  fold_right_initial.cpp
example/individual/functional/: apply_wrap.cpp  arg.cpp  bind.cpp  compose.cpp  curry.cpp  curry_quote.cpp  lambda.cpp  placeholders.cpp  protect.cpp  quote.cpp  unpack_args.cpp
example/individual/functor/: transform.cpp
example/individual/integral/: div.cpp  mod.cpp
example/individual/iterable/: at.cpp  back.cpp  drop.cpp  empty.cpp  front.cpp  pop_front.cpp  size.cpp
example/individual/logical/: logical_and.cpp  logical_not.cpp  logical_or.cpp
example/individual/mapping/: at_key.cpp  has_key.cpp
example/individual/miscellaneous_mfns/: always.cpp  c_str.cpp  identity.cpp  inherit.cpp  size_of.cpp  string_to_int.cpp
example/individual/monad/: mbind.cpp
example/individual/monad_plus/: mplus.cpp  mzero.cpp
example/individual/monoid/: mappend.cpp  mident.cpp
example/individual/numeric/: abs.cpp  add.cpp  mul.cpp  negate.cpp  sign.cpp  sub.cpp
example/individual/numeric_dtps/: integer_c.cpp  ratio_c.cpp
example/individual/orderable/: greater.cpp  greater_equal.cpp  less.cpp  less_equal.cpp  max.cpp  min.cpp
example/individual/rational/: quot.cpp  recip.cpp
example/individual/sequence/: clear.cpp  concat.cpp  erase.cpp  insert.cpp  make_seq.cpp  pop_back.cpp  push_back.cpp  push_front.cpp  take.cpp
example/individual/sequence_views/: filled_view.cpp  transformed_view.cpp  zipped_view.cpp
example/individual/sequences/: linked_list.cpp  map.cpp  range_c.cpp  set.cpp  set_c.cpp  string.cpp  vector.cpp  vector_c.cpp
example/individual/with_string_repr/: to_string.cpp
include/erythronelumbo/maihuenia/: all_of.hpp  always.hpp  any_of.hpp  applicative.hpp  apply_wrap.hpp  arg.hpp  bin_op_many.hpp  bind.hpp  bitwise.hpp  box.hpp  c_str.hpp  cartesian_product.hpp  comparable.hpp  compose.hpp  config.hpp  contains.hpp  copy.hpp  count_if.hpp  count_until.hpp  count_while.hpp  curry.hpp  define_error.hpp  drop_until.hpp  drop_while.hpp  empty_base.hpp  enumerable.hpp  equal_types.hpp  error.hpp  eval_if.hpp  extensible_mapping.hpp  fill.hpp  filled_view.hpp  find_if.hpp  foldable.hpp  for_each.hpp  functor.hpp  has_repeated.hpp  have_same_tag.hpp  identity.hpp  if.hpp  (+64 more)
include/erythronelumbo/maihuenia/detail/: enable_if.hpp  gcd.hpp  integral_to_string.hpp  integral_traits.hpp  preprocessor.hpp  sequence_folds.hpp  split_helpers.hpp  void_sink.hpp
include/erythronelumbo/maihuenia/detail/varseq/: drop.hpp  size.hpp  take.hpp  variadic_indexers.hpp  varseq_idx_seq.hpp
include/erythronelumbo/maihuenia/fwd/: bind.hpp  integer_c.hpp  integral_vector_c.hpp  lambda.hpp  linked_list.hpp  map.hpp  range_c.hpp  set.hpp  string.hpp  typeclass.hpp  vector.hpp
test/: CMakeLists.txt  eq_types.hpp
test/alg_creation/: cartesian_product.cpp  copy.cpp  fill.cpp  intercalate.cpp  iota.cpp  partition.cpp  scan_left.cpp  scan_left_initial.cpp  scan_right.cpp  scan_right_initial.cpp  split.cpp  split_sd.cpp  zip.cpp  zip_with.cpp
test/alg_querying/: all_of.cpp  any_of.cpp  contains.cpp  count.cpp  count_if.cpp  count_until.cpp  count_while.cpp  find.cpp  find_if.cpp  has_repeated.cpp  is_permutation.cpp  lexicographical_compare.cpp  max_element.cpp  min_element.cpp  none_of.cpp
test/alg_transformation/: drop_until.cpp  drop_while.cpp  intersperse.cpp  remove.cpp  remove_if.cpp  replace.cpp  replace_if.cpp  reverse.cpp  sort.cpp  take_until.cpp  take_while.cpp  unique.cpp
test/control/: eval_if.cpp  if.cpp  until.cpp  while.cpp
test/core/: equal_types.cpp  tag.cpp  unless_undefined.cpp
test/dt_miscellaneous/: box.hpp  optional.hpp  pair.cpp
test/dt_numeric/: integer_c.cpp  ratio_c.cpp
test/dt_seq_views/: filled_view.cpp  transformed_view.cpp  zipped_view.cpp
test/dt_sequences/: integral_vector_c.cpp  linked_list.cpp  map.cpp  range_c.cpp  set.cpp  set_c.cpp  string.cpp  vector.cpp  vector_c.cpp
test/functional/: apply_wrap.cpp  arg.cpp  bind.cpp  curry.cpp  curry_quote.cpp  lambda.cpp
test/miscellaneous/: always.cpp  identity.cpp  inherit.cpp  string_to_int.cpp
